modules/02-traffic-management/setup-mesh-resources/productcatalog-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalog
  namespace: workshop
spec:
  hosts:
  - productcatalog
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productcatalog
        port:
          number: 5000
